load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push", "container_image")

# gazelle:prefix github.com/Melon-Network-Inc/payment-service
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

go_image(
    name = "payment-service",
    binary = "//cmd/server:server",
)

container_push(
    name = "payment-service-push",
    format = "Docker",
    image = ":payment-service",
    registry = "index.docker.io",
    repository = "melonnetwork/payment-service",
)