load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "transaction",
    srcs = ["api.go"],
    importpath = "github.com/Melon-Network-Inc/payment-service/api/transaction",
    visibility = ["//visibility:public"],
)

go_test(
    name = "transaction_test",
    srcs = ["api_test.go"],
    embed = [":transaction"],
)
