load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/Melon-Network-Inc/payment-service/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//docs",
        "//pkg/transaction",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_melon_network_inc_account_service//pkg/friend",
        "@com_github_melon_network_inc_account_service//pkg/user",
        "@com_github_melon_network_inc_entity_repo//pkg/dbcontext",
        "@com_github_melon_network_inc_entity_repo//pkg/log",
        "@com_github_spf13_viper//:viper",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
