load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/Melon-Network-Inc/payment-service/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//docs",
        "//pkg/activity",
        "//pkg/news",
        "//pkg/repository",
        "//pkg/transaction",
        "//pkg/utils",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_go_co_op_gocron//:gocron",
        "@com_github_melon_network_inc_account_service//pkg/repository",
        "@com_github_melon_network_inc_common//pkg/config",
        "@com_github_melon_network_inc_common//pkg/dbcontext",
        "@com_github_melon_network_inc_common//pkg/log",
        "@com_github_melon_network_inc_common//pkg/notification",
        "@com_github_melon_network_inc_common//pkg/storage",
        "@com_github_melon_network_inc_common//pkg/utils",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@com_google_cloud_go_storage//:storage",
    ],
)

go_binary(
    name = "server",
    data = [
        "//config:blockchain.yml",
        "//config:email.yml",
        "//config:payment.yml",
    ],
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
