load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "accesslog",
    srcs = ["middleware.go"],
    importpath = "github.com/Melon-Network-Inc/payment-service/pkg/accesslog",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log",
        "@com_github_go_ozzo_ozzo_routing_v2//:ozzo-routing",
        "@com_github_go_ozzo_ozzo_routing_v2//access",
    ],
)

go_test(
    name = "accesslog_test",
    srcs = ["middleware_test.go"],
    embed = [":accesslog"],
    deps = [
        "//pkg/log",
        "@com_github_go_ozzo_ozzo_routing_v2//:ozzo-routing",
        "@com_github_stretchr_testify//assert",
    ],
)
