load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = ["db.go"],
    importpath = "github.com/Melon-Network-Inc/payment-service/pkg/db",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/entity",
        "@io_gorm_driver_postgres//:go_default_library",
        "@io_gorm_gorm//:go_default_library",
    ],
)
