load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = ["logger.go"],
    importpath = "github.com/Melon-Network-Inc/payment-service/pkg/log",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
        "@org_uber_go_zap//zaptest/observer:go_default_library",
    ],
)

go_test(
    name = "log_test",
    srcs = ["logger_test.go"],
    embed = [":log"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
