load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pagination",
    srcs = ["pages.go"],
    importpath = "github.com/Melon-Network-Inc/payment-service/pkg/pagination",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pagination_test",
    srcs = ["pages_test.go"],
    embed = [":pagination"],
    deps = ["@com_github_stretchr_testify//assert"],
)
