load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["transaction.go"],
    importpath = "github.com/Melon-Network-Inc/payment-service/pkg/repository",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_melon_network_inc_common//pkg/dbcontext",
        "@com_github_melon_network_inc_common//pkg/entity",
        "@com_github_melon_network_inc_common//pkg/log",
        "@io_gorm_gorm//:gorm",
    ],
)
