load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transaction",
    srcs = [
        "api.go",
        "repository.go",
        "service.go",
    ],
    importpath = "github.com/Melon-Network-Inc/payment-service/pkg/transaction",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log",
        "//pkg/processor",
        "//pkg/utils",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_melon_network_inc_entity_repo//pkg/api",
        "@com_github_melon_network_inc_entity_repo//pkg/dbcontext",
        "@com_github_melon_network_inc_entity_repo//pkg/entity",
        "@io_gorm_gorm//:gorm",
    ],
)
