load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transaction",
    srcs = [
        "api.go",
        "service.go",
    ],
    importpath = "github.com/Melon-Network-Inc/payment-service/pkg/transaction",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/processor",
        "//pkg/repository",
        "//pkg/utils",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_melon_network_inc_account_service//pkg/repository",
        "@com_github_melon_network_inc_common//pkg/api",
        "@com_github_melon_network_inc_common//pkg/entity",
        "@com_github_melon_network_inc_common//pkg/log",
        "@com_github_melon_network_inc_common//pkg/mwerrors",
        "@com_github_melon_network_inc_common//pkg/notification",
        "@com_github_melon_network_inc_common//pkg/pagination",
    ],
)
